--- a/game/game.vcxproj.filters
+++ b/game/game.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="playerInterface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Inventory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="headers\playerInterface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="headers\Inventory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
