--- a/game/game.vcxproj
+++ b/game/game.vcxproj
@@ -178,18 +178,18 @@ $(LocalDebuggerEnvironment)</LocalDebuggerEnvironment>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source\EntityAnimation.cpp" />
-    <ClCompile Include="Source\EntityPhysic.cpp" />
-    <ClCompile Include="Source\EntityWeapon.cpp" />
-    <ClCompile Include="Source\Inventory.cpp" />
+    <ClCompile Include="Source\PlayerEntity\EntityAnimation.cpp" />
+    <ClCompile Include="Source\PlayerEntity\EntityPhysic.cpp" />
+    <ClCompile Include="Source\PlayerEntity\EntityWeapon.cpp" />
+    <ClCompile Include="Source\PlayerEntity\Inventory.cpp" />
     <ClCompile Include="Source\playerInterface.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\MyGame.cpp" />
-    <ClCompile Include="Source\PlayerEntity.cpp">
+    <ClCompile Include="Source\PlayerEntity\PlayerEntity.cpp">
       <DeploymentContent>true</DeploymentContent>
     </ClCompile>
     <ClCompile Include="Source\Map.cpp" />
-    <ClCompile Include="stdafx.cpp">
+    <ClCompile Include="Source\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -211,7 +211,6 @@ $(LocalDebuggerEnvironment)</LocalDebuggerEnvironment>
     <ClInclude Include="headers\PlayerEntity\PlayerEntity.h" />
     <ClInclude Include="headers\playerInterface.h" />
     <ClInclude Include="Source\stdafx.h" />
-    <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
