--- a/game/game.vcxproj.filters
+++ b/game/game.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Source\PlayerEntity\EntityWeapon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Physic.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers\MyGame.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\stdafx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="headers\Physic.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
